# SuperFileGalaxy

./: .gitignore  README.md  pyproject.toml
src/files/: bcsv.py
src/tools/: io.py
tests/: __init__.py
tests/tools/: test_io.py
