[build-system]
requires = ["setuptools>=64",
            "annotated_types",
            "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "--tb=short"]
